<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
    </group>

    <item android:title="Lessons">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_lesson"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_lesson" />
                <item
                    android:id="@+id/nav_insecure_data_lesson"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_insecure_data_lesson" />
                <item
                    android:id="@+id/nav_poor_auth_lesson"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_poor_auth_lesson" />
                <item
                    android:id="@+id/nav_supply_chain_lesson"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_supply_chain_lesson" />
                <item
                    android:id="@+id/nav_insecure_comm_lesson"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_insecure_comm_lesson" />
                <item
                    android:id="@+id/nav_insufficient_crypto_lesson"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_insufficient_crypto_lesson" />
            </group>
        </menu>
    </item>

    <item android:title="Challenges">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_challenge_1"
                android:icon="@drawable/ic_menu_code"
                android:title="@string/menu_challenge1" />
            <item
                android:id="@+id/nav_challenge_2"
                android:icon="@drawable/ic_menu_code"
                android:title="@string/menu_challenge2" />
            <item
                android:id="@+id/nav_challenge_3"
                android:icon="@drawable/ic_menu_code"
                android:title="@string/menu_challenge3" />
            <item
                android:id="@+id/nav_insecure_data1"
                android:icon="@drawable/ic_menu_lock"
                android:title="@string/menu_insecure_data1" />
            <item
                android:id="@+id/nav_insecure_data2"
                android:icon="@drawable/ic_menu_lock"
                android:title="@string/menu_insecure_data2" />
            <item
                android:id="@+id/nav_insecure_data3"
                android:icon="@drawable/ic_menu_lock"
                android:title="@string/menu_insecure_data3" />
            <item
                android:id="@+id/nav_insecure_data4"
                android:icon="@drawable/ic_menu_lock"
                android:title="@string/menu_insecure_data4" />
            <item
                android:id="@+id/nav_poor_auth_challenge"
                android:icon="@drawable/ic_menu_lock"
                android:title="@string/menu_poor_auth_challenge" />
            <item
                android:id="@+id/nav_supply_chain_challenge"
                android:icon="@drawable/ic_menu_warning"
                android:title="@string/menu_supply_chain_challenge" />
            <item
                android:id="@+id/nav_insecure_comm_challenge"
                android:icon="@drawable/ic_menu_alert"
                android:title="@string/menu_insecure_comm_challenge" />
            <item
                android:id="@+id/nav_insufficient_crypto_challenge"
                android:icon="@drawable/ic_menu_lock"
                android:title="@string/menu_insufficient_crypto_challenge" />
        </group>
    </menu>
    </item>
</menu>