<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.owasp.reverser.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_lesson"
        android:name="com.owasp.reverser.ui.lessons.LessonFragment"
        android:label="@string/menu_lesson"
        tools:layout="@layout/fragment_lesson" />

    <fragment
        android:id="@+id/nav_insecure_data_lesson"
        android:name="com.owasp.reverser.ui.insecuredata.InsecureDataLessonFragment"
        android:label="@string/menu_insecure_data_lesson"
        tools:layout="@layout/fragment_insecure_data_lesson" />

    <fragment
        android:id="@+id/nav_challenge_1"
        android:name="com.owasp.reverser.ui.challenges.Challenge1Fragment"
        android:label="@string/menu_challenge1"
        tools:layout="@layout/fragment_challenge1" />

    <fragment
        android:id="@+id/nav_challenge_2"
        android:name="com.owasp.reverser.ui.challenges.Challenge2Fragment"
        android:label="@string/menu_challenge2"
        tools:layout="@layout/fragment_challenge2" />

    <fragment
        android:id="@+id/nav_challenge_3"
        android:name="com.owasp.reverser.ui.challenges.Challenge3Fragment"
        android:label="@string/menu_challenge3"
        tools:layout="@layout/fragment_challenge3" />

    <fragment
        android:id="@+id/nav_insecure_data1"
        android:name="com.owasp.reverser.ui.insecuredata1.InsecureData1Fragment"
        android:label="@string/menu_insecure_data1"
        tools:layout="@layout/fragment_insecure_data1" />

    <fragment
        android:id="@+id/nav_insecure_data2"
        android:name="com.owasp.reverser.ui.insecuredata2.InsecureData2Fragment"
        android:label="@string/menu_insecure_data2"
        tools:layout="@layout/fragment_insecure_data2" />

    <fragment
        android:id="@+id/nav_insecure_data3"
        android:name="com.owasp.reverser.ui.insecuredata3.InsecureData3Fragment"
        android:label="@string/menu_insecure_data3"
        tools:layout="@layout/fragment_insecure_data3" />

    <fragment
        android:id="@+id/nav_insecure_data4"
        android:name="com.owasp.reverser.ui.insecuredata4.InsecureData4Fragment"
        android:label="@string/menu_insecure_data4"
        tools:layout="@layout/fragment_insecure_data4" />

    <fragment
        android:id="@+id/nav_poor_auth_lesson"
        android:name="com.owasp.reverser.ui.poorauth.PoorAuthLessonFragment"
        android:label="@string/menu_poor_auth_lesson"
        tools:layout="@layout/fragment_poor_auth_lesson" />

    <fragment
        android:id="@+id/nav_poor_auth_challenge"
        android:name="com.owasp.reverser.ui.poorauth.PoorAuthChallengeFragment"
        android:label="@string/menu_poor_auth_challenge"
        tools:layout="@layout/fragment_poor_auth_challenge" />

    <fragment
        android:id="@+id/nav_supply_chain_lesson"
        android:name="com.owasp.reverser.ui.supplychain.SupplyChainLessonFragment"
        android:label="@string/menu_supply_chain_lesson"
        tools:layout="@layout/fragment_supply_chain_lesson" />

    <fragment
        android:id="@+id/nav_supply_chain_challenge"
        android:name="com.owasp.reverser.ui.supplychain.SupplyChainChallengeFragment"
        android:label="@string/menu_supply_chain_challenge"
        tools:layout="@layout/fragment_supply_chain_challenge" />

    <fragment
        android:id="@+id/nav_insecure_comm_lesson"
        android:name="com.owasp.reverser.ui.insecurecomm.InsecureCommLessonFragment"
        android:label="@string/menu_insecure_comm_lesson"
        tools:layout="@layout/fragment_insecure_comm_lesson" />

    <fragment
        android:id="@+id/nav_insecure_comm_challenge"
        android:name="com.owasp.reverser.ui.insecurecomm.InsecureCommChallengeFragment"
        android:label="@string/menu_insecure_comm_challenge"
        tools:layout="@layout/fragment_insecure_comm_challenge" />

    <fragment
        android:id="@+id/nav_insufficient_crypto_lesson"
        android:name="com.owasp.reverser.ui.crypto.InsufficientCryptoLessonFragment"
        android:label="@string/menu_insufficient_crypto_lesson"
        tools:layout="@layout/fragment_insufficient_crypto_lesson" />

    <fragment
        android:id="@+id/nav_insufficient_crypto_challenge"
        android:name="com.owasp.reverser.ui.crypto.InsufficientCryptoChallengeFragment"
        android:label="@string/menu_insufficient_crypto_challenge"
        tools:layout="@layout/fragment_insufficient_crypto_challenge" />

    <fragment
        android:id="@+id/nav_adb_reference"
        android:name="com.owasp.reverser.ui.adb.AdbReferenceFragment"
        android:label="@string/action_adb_reference"
        tools:layout="@layout/fragment_adb_reference" />

</navigation>